--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1251">
@@ -51,10 +52,16 @@
         <ul>
           <li><a href="#mozTocId1365">Chapter 1. Collision</a></li>
           <li><a href="#mozTocId414110">Chapter 2. Timer</a></li>
-          <li><a href="#mozTocId446066">Chapter 3. Binary files</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId308337">Part 5. Other important things</a>
+      <li><a href="#mozTocId81440">Part 5. Binary files</a>
+        <ul>
+          <li><a href="#mozTocId844773">Chapter 1. Base binary files subsystem</a></li>
+          <li><a href="#mozTocId392890">Chapter 2. File reader</a></li>
+          <li><a href="#mozTocId143184">Chapter 3. File writer</a></li>
+        </ul>
+      </li>
+      <li><a href="#mozTocId308337">Part 6. Other important things</a>
         <ul>
           <li><a href="#mozTocId702206">Chapter 1. Memory</a></li>
           <li><a href="#mozTocId776211">Chapter 2. Display back-light</a></li>
@@ -64,7 +71,7 @@
           <li><a href="#mozTocId73461">Chapter 5. Input</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId412631">Part 6. Sound</a>
+      <li><a href="#mozTocId412631">Part 7. Sound</a>
         <ul>
           <li><a href="#mozTocId251362">Chapter 1. Low-level sound subsystem</a></li>
           <li><a href="#mozTocId873628">Chapter 2. Loading audio</a></li>
@@ -72,7 +79,7 @@
           <li><a href="#mozTocId553480">Chapter 4. Mixer</a></li>
         </ul>
       </li>
-      <li><a href="#mozTocId912509">Part 7. Internal details of the library
+      <li><a href="#mozTocId912509">Part 8. Internal details of the library
           subsystems</a>
         <ul>
           <li><a href="#mozTocId596077">Chapter 1. A few words for a curious
@@ -279,7 +286,7 @@ Dingux
       <span style="text-decoration: underline;">Work with virtual surface</span><br>
       <br>
       <span style="font-style: italic;">Frame</span> class provide simple access
-      virtual surface. Don’t use it directly. Let’s look to public methods.<br>
+      to virtual surface. Don’t use it directly. Let’s look to public methods.<br>
       <br>
       <span style="font-style: italic;">unsigned short int* Frame::get_buffer();</span>
       – Return handle to surface buffer.<br>
@@ -894,43 +901,77 @@ Dingux
       Initialize stop point. Return true and reinitialize start point if
       interval between stop and start points large or equal than specific
       seconds.<br>
+    </big><big><br>
+    </big>
+    <h1><a id="mozTocId81440" class="mozTocH1"></a><big>
+        Part 5. Binary files</big></h1>
+    <big>
       <br>
     </big>
-    <h2><a class="mozTocH2" name="mozTocId446066"></a><big>Chapter 3. Binary
-        files</big></h2>
-    <big><br>
-      <span style="text-decoration: underline;">Work with binary files</span><br>
+    <h2><a id="mozTocId844773" class="mozTocH2"></a><big>
+        Chapter 1. Base binary files subsystem</big></h2>
+    <big>
       <br>
-      Just use <span style="font-style: italic;">Binary_File</span> class for
-      work with the binary files. Let’s look to public methods.<br>
+      <u>Work with binary files</u><br>
       <br>
-      <span style="font-style: italic;">void Binary_File::create_temp();</span>
-      – Create a temporary file. This file will be deleted when it closed.<br>
-      <span style="font-style: italic;">void Binary_File::open_read(const char
-        *name);</span> – Open a file for read.<br>
-      <span style="font-style: italic;">void Binary_File::open_write(const char
-        *name);</span> – Open a file for read and write.<br>
-      <span style="font-style: italic;">void Binary_File::close();</span> –
-      Close the file.<br>
-      <span style="font-style: italic;">void Binary_File::set_position(const
-        off_t offset);</span> – Set the file position.<br>
-      <span style="font-style: italic;">long int Binary_File::get_position();</span>
-      – Return current file position.<br>
-      <span style="font-style: italic;">long int Binary_File::get_length();</span>
-      – Return file length in bytes.<br>
-      <span style="font-style: italic;">void Binary_File::read(void
-        *buffer,const size_t length);</span> – Read data from the file.<br>
-      <span style="font-style: italic;">void Binary_File::write(void
-        *buffer,const size_t length);</span> – Write data to the file.<br>
-      <span style="font-style: italic;">void Binary_File::check_error();</span>
-      – Return true if last file operation failed.<br>
+      <i>Binary_File</i> class provide simple access to base binary files
+      subsystem. Don’t use it directly. Let’s look to public methods.<br>
       <br>
-      <span style="text-decoration: underline;">Important notice</span><br>
+      <i>
+        void Binary_File::close();</i> – Close the file.<br>
+      <i>
+        void Binary_File::set_position(const long int offset);</i> – Set the
+      file position.<br>
+      <i>
+        long int Binary_File::get_position();</i> – Return current file
+      position.<br>
+      <i>
+        long int Binary_File::get_length();</i> – Return file length in bytes.<br>
+      <i>
+        bool Binary_File::check_error();</i> – Return true if last file
+      operation failed.<br>
+      <br>
+      <u>Important notice</u><br>
       <br>
       Target file size limit is 2 gigabytes.<br>
       <br>
     </big>
-    <h1><a class="mozTocH1" name="mozTocId308337"></a><big>Part 5. Other
+    <h2><a id="mozTocId392890" class="mozTocH2"></a><big>
+        Chapter 2. File reader</big></h2>
+    <big>
+      <br>
+      File reader intend for reading data from a binary files. <i>Input_File</i>
+      class provide access to file reader. It is derived from <i>Binary_File</i>
+      class. Let’s look on public methods.<br>
+      <br>
+      <i>
+        void Input_File::open(const char *name);</i> – Open a file for read.<br>
+      <i>
+        void Input_File::read(void *buffer,const size_t length);</i> – Read data
+      from the file.<br>
+      <br>
+    </big>
+    <h2><a id="mozTocId143184" class="mozTocH2"></a><big>
+        Chapter 3. File writer</big></h2>
+    <big>
+      <br>
+      File writer intend for write data to binary files. <i>Output_File</i>
+      class
+      provide access to file reader. It is derived from <i>Binary_File</i>
+      class.
+      Let’s look on public methods.<br>
+      <br>
+      <i>
+        void Output_File::open(const char *name);</i> – Open a file for write.<br>
+      <i>
+        void Output_File::create_temp();</i> – Create a temporary file. This
+      file will be deleted when it closed.<br>
+      <i>
+        void Output_File::write(void *buffer,const size_t length);</i> – Write
+      data to the file.<br>
+      <br>
+    </big>
+    <h1><a class="mozTocH1" name="mozTocId308337"></a><big>Part 6. Other
         important things</big></h1>
     <big><br>
     </big>
@@ -1136,7 +1177,7 @@ Dingux
     </table>
     <big><br>
     </big>
-    <h1><a class="mozTocH1" name="mozTocId412631"></a><big>Part 6. Sound</big></h1>
+    <h1><a class="mozTocH1" name="mozTocId412631"></a><big>Part 7. Sound</big></h1>
     <big><br>
     </big>
     <h2><a class="mozTocH2" name="mozTocId251362"></a><big>Chapter 1. Low-level
@@ -1344,7 +1385,7 @@ Dingux
       Return current level of sound volume.<br>
       <br>
     </big>
-    <h1><a class="mozTocH1" name="mozTocId912509"></a><big>Part 7. Internal
+    <h1><a class="mozTocH1" name="mozTocId912509"></a><big>Part 8. Internal
         details of the library subsystems</big></h1>
     <big><br>
     </big>
@@ -1685,6 +1726,7 @@ sound
     <big> 4.6.8 – Small changes.</big><br>
     <big>4.6.9 – Source code was synced with Neon game development kit 4.8.5.</big><br>
     <big>4.7 – Source code was synced with Neon game development kit 4.8.6.</big><br>
-    <big>4.7.1 – Source code was synced with Neon game development kit 4.8.7.</big>
+    <big>4.7.1 – Source code was synced with Neon game development kit 4.8.7.</big><br>
+    <big>4.7.2 – Source code was synced with Neon game development kit 4.8.8.</big>
   </body>
 </html>
