Source code was synced with Neon game development kit 4.9

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1251">
@@ -364,7 +363,7 @@ Dingux
         bellow.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 387px; height: 94px;" cellspacing="2"
+    <table style="text-align: left; width: 387px; height: 94px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -448,7 +447,7 @@ Dingux
         bellow.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 562px; height: 124px;" cellspacing="2"
+    <table style="text-align: left; width: 562px; height: 124px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -531,7 +530,7 @@ Dingux
         bellow.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 388px; height: 124px;" cellspacing="2"
+    <table style="text-align: left; width: 388px; height: 124px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -575,21 +574,29 @@ Dingux
       <span style="font-style: italic;">bool Sprite::get_transparent() const;</span>
       – Return true if transparent mode is enabled.<br>
       <span style="font-style: italic;">void Sprite::set_x(const unsigned long
-        int x);</span> – Set x-coordinate of the sprite position.<br>
-      <span style="font-style: italic;">void Sprite::set_y(const unsigned long
-        int y);</span> – Set y-coordinate of the sprite position.<br>
-      <span style="font-style: italic;">void Sprite::increase_x(const unsigned
-        long int increment);</span> – Increase x-coordinate of the current
-      sprite position.<br>
-      <span style="font-style: italic;">void Sprite::decrease_x(const unsigned
-        long int decrement);</span> – Decrease x-coordinate of the current
-      sprite position.<br>
-      <span style="font-style: italic;">void Sprite::increase_y(const unsigned
-        long int increment);</span> – Increase y-coordinate of the current
-      sprite position.<br>
-      <span style="font-style: italic;">void Sprite::decrease_y(const unsigned
-        long int decrement);</span> – Decrease y-coordinate of the current
-      sprite position.<br>
+        int x);</span> – Set x-coordinate of the sprite position.</big><br>
+    <big> <span style="font-style: italic;">void Sprite::set_y(const unsigned
+        long int y);</span> – Set y-coordinate of the sprite position.</big><br>
+    <big><i>void Sprite::increase_x();</i> – Increase x-coordinate of the
+      current sprite position.</big><br>
+    <big><i>void Sprite::decrease_x();</i> – Decrease x-coordinate of the
+      current sprite position.</big><br>
+    <big><i>void Sprite::increase_y();</i> – Increase y-coordinate of the
+      current sprite position.</big><br>
+    <big><i>void Sprite::decrease_y();</i> – Decrease y-coordinate of the
+      current sprite position.</big><br>
+    <big><i>void Sprite::increase_x(const unsigned long int increment);</i> –
+      Increase x-coordinate of the current sprite position with user-defined
+      increment.</big><br>
+    <big><i>void Sprite::decrease_x(const unsigned long int decrement);</i> –
+      Decrease x-coordinate of the current sprite position with user-defined
+      decrement.</big><br>
+    <big><i>void Sprite::increase_y(const unsigned long int increment);</i> –
+      Increase y-coordinate of the current sprite position with user-defined
+      increment.</big><br>
+    <big><i>void Sprite::decrease_y(const unsigned long int decrement);</i> –
+      Decrease y-coordinate of the current sprite position with user-defined
+      decrement.</big><big><br>
       <span style="font-style: italic;">unsigned long int Sprite::get_x() const;</span>
       – Return the x position of the sprite.<br>
       <span style="font-style: italic;">unsigned long int Sprite::get_y() const;</span>
@@ -724,7 +731,7 @@ Dingux
         list of supported format below.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 686px; height: 94px;" cellspacing="2"
+    <table style="text-align: left; width: 686px; height: 94px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -972,7 +979,7 @@ Dingux
         constants.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 477px; height: 454px;" cellspacing="2"
+    <table style="text-align: left; width: 477px; height: 454px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1053,7 +1060,7 @@ Dingux
     <p><big> You can see specification of default sound format bellow.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 350px; height: 124px;" cellspacing="2"
+    <table style="text-align: left; width: 350px; height: 124px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1118,7 +1125,7 @@ Dingux
         see it below.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 408px; height: 124px;" cellspacing="2"
+    <table style="text-align: left; width: 408px; height: 124px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1269,7 +1276,7 @@ sound
     <p><big> The button states look as predefined constants.</big></p>
     <big><br>
     </big>
-    <table style="text-align: left; width: 425px; height: 94px;" cellspacing="2"
+    <table style="text-align: left; width: 425px; height: 94px;" cellspacing="2"
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1549,6 +1556,7 @@ sound
     <big>4.7 – Source code was synced with Neon game development kit 4.8.6.</big><br>
     <big>4.7.1 – Source code was synced with Neon game development kit 4.8.7.</big><br>
     <big>4.7.2 – Source code was synced with Neon game development kit 4.8.8.</big><br>
-    <big>4.7.3 – Source code was synced with Neon game development kit 4.8.9.</big>
+    <big>4.7.3 – Source code was synced with Neon game development kit 4.8.9.</big><br>
+    <big>4.7.4 – Source code was synced with Neon game development kit 4.9.</big>
   </body>
 </html>
