Lot of internal changes

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -8,7 +8,7 @@
         Programmer reference</big> </div>
     <big><br>
       <br>
-      Table of contents </big>
+      Table of contents</big>
     <ul id="mozToc">
       <!--mozToc h1 1 h2 2 h3 3 h4 4 h5 5 h6 6-->
       <li><a href="#mozTocId817184">Part 1. Welcome to Dingux game development
@@ -1557,6 +1557,10 @@ sound
     <big>4.7.1 – Source code was synced with Neon game development kit 4.8.7.</big><br>
     <big>4.7.2 – Source code was synced with Neon game development kit 4.8.8.</big><br>
     <big>4.7.3 – Source code was synced with Neon game development kit 4.8.9.</big><br>
-    <big>4.7.4 – Source code was synced with Neon game development kit 4.9.</big>
+    <big>4.7.4 – Source code was synced with Neon game development kit 4.9.</big><br>
+    <big>4.7.5 – Source code was synced with Neon game development kit 4.9.6.</big><br>
+    <big>4.7.6 – Virtual surface subsystem was improved.</big><br>
+    <big>4.7.7 – Game-pad support was improved.</big><br>
+    <big>4.7.8 – Audio playing subsystem was improved.</big>
   </body>
 </html>
