Source code was synced with Neon game development kit 5.1

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -448,7 +448,6 @@ Dingux
     <big><br>
     </big>
     <table style="text-align: left; width: 562px; height: 124px;" cellspacing="2"
-
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -615,11 +614,16 @@ Dingux
       <span style="font-style: italic;">void Sprite::set_position(const unsigned
         long int x, const unsigned long int y);</span> – Set sprite position.<br>
       <span style="font-style: italic;">void Sprite::draw_sprite();</span> –
-      Draw a sprite.<br>
-      <span style="font-style: italic;">void Sprite::draw_sprite(const unsigned
-        long int x, const unsigned long int y);</span> – Set sprite position and
-      draw it.<br>
-      <br>
+      Draw a sprite.</big><br>
+    <big> <span style="font-style: italic;">void Sprite::draw_sprite(const
+        unsigned long int x, const unsigned long int y);</span> – Set sprite
+      position and draw it.</big><br>
+    <big><i>void Sprite::draw_sprite(const bool transparency);</i> – Set
+      transparent mode and draw a sprite.</big><br>
+    <big><i>void Sprite::draw_sprite(const bool transparency,const unsigned long
+        int x, const unsigned long int y);</i> – Set transparent mode and draw a
+      sprite at target position.</big><br>
+    <big> <br>
       <span style="text-decoration: underline;">Important notes</span><br>
       <br>
       Always call <span style="font-style: italic;">set_kind</span> method
@@ -1579,6 +1583,7 @@ sound
     <big>4.7.9 – Source code was synced with Neon game development kit 5.0.5.</big><br>
     <big>4.8 – Render performance was improved.</big><br>
     <big>4.8.1 – 4.8.3 – Small changes.</big><br>
-    <big>4.8.4 – Source code was synced with Neon game development kit 5.0.9.</big>
+    <big>4.8.4 – Source code was synced with Neon game development kit 5.0.9.</big><br>
+    <big>4.8.5 – Source code was synced with Neon game development kit 5.1.</big>
   </body>
 </html>
