Source code was synced with Neon game development kit 5.1.1

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -400,9 +400,11 @@ Dingux
       pixels.<br>
       <span style="font-style: italic;">void Surface::resize_image(const
         unsigned long int new_width, const unsigned long int new_height);</span>
-      – Resize current image.<br>
-      <span style="font-style: italic;">void Surface::mirror_image(const
-        MIRROR_TYPE kind);</span> – Do mirror the current image. </big>
+      – Resize current image.</big><br>
+    <big> <span style="font-style: italic;">void Surface::mirror_image(const
+        MIRROR_TYPE kind);</span> – Do mirror the current image.</big><br>
+    <big><i>void Surface::horizontal_mirror();</i> – Do horizontal image mirror.</big><br>
+    <big><i>void Surface::vertical_mirror();</i> – Do vertical image mirror.</big>
     <h2><a class="mozTocH2" name="mozTocId889327"></a><big>Chapter 6. Advanced
         image subsystem</big></h2>
     <big><br>
@@ -1584,6 +1586,7 @@ sound
     <big>4.8 – Render performance was improved.</big><br>
     <big>4.8.1 – 4.8.3 – Small changes.</big><br>
     <big>4.8.4 – Source code was synced with Neon game development kit 5.0.9.</big><br>
-    <big>4.8.5 – Source code was synced with Neon game development kit 5.1.</big>
+    <big>4.8.5 – Source code was synced with Neon game development kit 5.1.</big><br>
+    <big>4.8.6 – Source code was synced with Neon game development kit 5.1.1.</big>
   </body>
 </html>
