Source code was synced with Neon game development kit 5.1.2

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1081,6 +1081,7 @@ Dingux
     <big><br>
     </big>
     <table style="text-align: left; width: 350px; height: 124px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1587,6 +1588,7 @@ sound
     <big>4.8.1 – 4.8.3 – Small changes.</big><br>
     <big>4.8.4 – Source code was synced with Neon game development kit 5.0.9.</big><br>
     <big>4.8.5 – Source code was synced with Neon game development kit 5.1.</big><br>
-    <big>4.8.6 – Source code was synced with Neon game development kit 5.1.1.</big>
+    <big>4.8.6 – Source code was synced with Neon game development kit 5.1.1.</big><br>
+    <big>4.8.7 – Source code was synced with Neon game development kit 5.1.2.</big>
   </body>
 </html>
