Source code was synced with Neon game development kit 5.1.5

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -949,9 +949,9 @@ Dingux
       You may need interaction with operation system. Just use <span style="font-style: italic;">System</span>
       class for do it. Let’s look to public methods.<br>
       <br>
-      <span style="font-style: italic;">const unsigned long int
+      <span style="font-style: italic;">unsigned long int
         System::get_random(const unsigned long int number);</span> – Return a
-      random number from zero to argument–1.<br>
+      random number from zero to number–1.<br>
       <span style="font-style: italic;">void System::quit();</span> – Exit from
       you program and return user to operation system.<br>
       <span style="font-style: italic;">void System::run(const char *command);</span>
@@ -1090,7 +1090,6 @@ Dingux
     <big><br>
     </big>
     <table style="text-align: left; width: 350px; height: 124px;" cellspacing="2"
-
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1599,6 +1598,7 @@ sound
     <big>4.8.5 – Source code was synced with Neon game development kit 5.1.</big><br>
     <big>4.8.6 – Source code was synced with Neon game development kit 5.1.1.</big><br>
     <big>4.8.7 – Source code was synced with Neon game development kit 5.1.2.</big><br>
-    <big>4.8.8 – Source code was synced with Neon game development kit 5.1.4.</big>
+    <big>4.8.8 – Source code was synced with Neon game development kit 5.1.4.</big><br>
+    <big>4.8.9 – Source code was synced with Neon game development kit 5.1.5.</big>
   </body>
 </html>
