Source code was synced with Neon game development kit 5.1.7

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1599,6 +1599,7 @@ sound
     <big>4.8.6 – Source code was synced with Neon game development kit 5.1.1.</big><br>
     <big>4.8.7 – Source code was synced with Neon game development kit 5.1.2.</big><br>
     <big>4.8.8 – Source code was synced with Neon game development kit 5.1.4.</big><br>
-    <big>4.8.9 – Source code was synced with Neon game development kit 5.1.5.</big>
+    <big>4.8.9 – Source code was synced with Neon game development kit 5.1.5.</big><br>
+    <big>4.9 – Source code was synced with Neon game development kit 5.1.7.</big>
   </body>
 </html>
