Source code was synced with Neon game development kit 5.2.3

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1601,6 +1601,7 @@ sound
     <big>4.8.8 – Source code was synced with Neon game development kit 5.1.4.</big><br>
     <big>4.8.9 – Source code was synced with Neon game development kit 5.1.5.</big><br>
     <big>4.9 – Source code was synced with Neon game development kit 5.1.7.</big><br>
-    <big>4.9.1 – Source code was synced with Neon game development kit 5.1.8.</big>
+    <big>4.9.1 – Source code was synced with Neon game development kit 5.1.8.</big><br>
+    <big>4.9.2 – Source code was synced with Neon game development kit 5.2.3.</big>
   </body>
 </html>
