Gopher 2 support was added

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -16,10 +16,11 @@
         <ul>
           <li><a href="#mozTocId387531">Chapter 1. Introduction</a></li>
           <li><a href="#mozTocId558083">Chapter 2. A special thanks</a></li>
-          <li><a href="#mozTocId419893">Chapter 3. SDK</a></li>
-          <li><a href="#mozTocId647026">Chapter 4. Compilation</a></li>
-          <li><a href="#mozTocId59157">Chapter 5. Library name-space</a></li>
-          <li><a href="#mozTocId239028">Chapter 6. License</a></li>
+          <li><a href="#mozTocId642601">Chapter 3. Gopher 2 specific notes</a></li>
+          <li><a href="#mozTocId419893">Chapter 4. SDK</a></li>
+          <li><a href="#mozTocId647026">Chapter 5. Compilation</a></li>
+          <li><a href="#mozTocId59157">Chapter 6. Library name-space</a></li>
+          <li><a href="#mozTocId239028">Chapter 7. License</a></li>
         </ul>
       </li>
       <li><a href="#mozTocId489599">Part 2. Base things</a>
@@ -112,10 +113,13 @@
       Dingoo Linux also ported to a few another devices. My library can work
       with it. You can see list of supported devices below. </big>
     <ul>
-      <li><big>DINGOO A320</big></li>
-      <li><big>DINGOO A320E</big></li>
-      <li><big>DINGOO A380</big></li>
-      <li><big>RITMIX RZX–50</big></li>
+      <li><big>Dingoo A320<br>
+        </big></li>
+      <li><big>Dingoo A320E</big></li>
+      <li><big>Dingoo A380</big></li>
+      <li><big>Ritmix RZX–50</big></li>
+      <li><big>Gopher 2<br>
+        </big></li>
     </ul>
     <big><br>
       <span style="text-decoration: underline;">Features</span><br>
@@ -161,8 +165,15 @@
     </ul>
     <big><br>
       Also thanks to PVS-Studio team for <a href="https://www.viva64.com/en/b/0614/">free
-        license</a>. </big>
-    <h2><a class="mozTocH2" name="mozTocId419893"></a><big>Chapter 3. SDK</big></h2>
+        license</a>.<br>
+    </big>
+    <h2><a id="mozTocId642601" class="mozTocH2"></a><big>Chapter 3. Gopher 2
+        specific notes</big></h2>
+    <big><br>
+      This library need <a href="https://vk.com/topic-147138567_38560454">alternative
+        firmware</a> for correct work.<br>
+    </big>
+    <h2><a class="mozTocH2" name="mozTocId419893"></a><big>Chapter 4. SDK</big></h2>
     <big><br>
       This library was successfully tested with follow SDK: </big>
     <ul>
@@ -176,17 +187,17 @@ Dingux
             RZX-50 SDK</big></a></li>
     </ul>
     <big> </big>
-    <h2><a class="mozTocH2" name="mozTocId647026"></a><big>Chapter 4.
+    <h2><a class="mozTocH2" name="mozTocId647026"></a><big>Chapter 5.
         Compilation</big></h2>
     <big><br>
       Disable all compiler optimization. It needs for correct work. See GCC
       documentation for more information about compiler optimization. </big>
-    <h2><a class="mozTocH2" name="mozTocId59157"></a><big>Chapter 5. Library
+    <h2><a class="mozTocH2" name="mozTocId59157"></a><big>Chapter 6. Library
         name-space</big></h2>
     <big><br>
       All library classes declared in <span style="font-style: italic;">DINGUXGDK</span>
       name-space. </big>
-    <h2><a class="mozTocH2" name="mozTocId239028"></a><big>Chapter 6. License</big></h2>
+    <h2><a class="mozTocH2" name="mozTocId239028"></a><big>Chapter 7. License</big></h2>
     <big><br>
       <span style="text-decoration: underline;">Dingux game development kit
         license</span><br>
@@ -1048,6 +1059,18 @@ Dingux
           <td style="vertical-align: top;"><big>Y </big></td>
         </tr>
         <tr>
+          <td style="vertical-align: top;"><big>BUTTON_C<br>
+            </big></td>
+          <td style="vertical-align: top;"><big>C<br>
+            </big></td>
+        </tr>
+        <tr>
+          <td style="vertical-align: top;"><big>BUTTON_Z<br>
+            </big></td>
+          <td style="vertical-align: top;"><big>Z<br>
+            </big></td>
+        </tr>
+        <tr>
           <td style="vertical-align: top;"><big>BUTTON_L</big></td>
           <td style="vertical-align: top;"><big>L </big></td>
         </tr>
@@ -1061,7 +1084,7 @@ Dingux
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>BUTTON_SELECT</big></td>
-          <td style="vertical-align: top;"><big>Select </big></td>
+          <td style="vertical-align: top;"><big>Menu/Select </big></td>
         </tr>
         <tr>
           <td style="vertical-align: top;"><big>BUTTON_POWER</big></td>
@@ -1603,6 +1626,7 @@ sound
     <big>4.9 – Source code was synced with Neon game development kit 5.1.7.</big><br>
     <big>4.9.1 – Source code was synced with Neon game development kit 5.1.8.</big><br>
     <big>4.9.2 – Source code was synced with Neon game development kit 5.2.3.</big><br>
-    <big>4.9.3 – Source code was synced with Neon game development kit 5.2.5.</big>
+    <big>4.9.3 – Source code was synced with Neon game development kit 5.2.5.<br>
+      4.9.4 – Gopher 2 support was added.</big>
   </body>
 </html>
