--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -268,13 +268,10 @@ Dingux
       – Return amount of pixels in the buffer.<br>
       <span style="font-style: italic;">void Frame::clear_screen();</span> –
       Clear the surface. Fill it by black color.</big><br>
-    <big> <span style="font-style: italic;">void Frame::draw_pixel(const
-        unsigned long int x,const unsigned long int y, const unsigned char
-        red,const unsigned char green, const unsigned char blue);</span> – Draw
-      a pixel to the surface.</big><br>
-    <big><i>bool Frame::put_pixel(const size_t offset,const unsigned short int
-        red,const unsigned short int green,const unsigned short int blue);</i> –
-      Put a pixel to the surface buffer. Return false if operation was failed.</big><br>
+    <big><i>bool Frame::draw_pixel(const unsigned long int x,const unsigned long
+        int y, const unsigned short int red,const unsigned short int green,
+        const unsigned short int blue);</i> – Draw a pixel to the surface.
+      Return false if failed.</big><br>
     <big> <span style="font-style: italic;">unsigned long int
         Frame::get_frame_width() const;</span> – Return the frame width in
       pixels.<br>
@@ -1631,6 +1628,18 @@ sound
     <big>4.9.2 – Source code was synced with Neon game development kit 5.2.3.</big><br>
     <big>4.9.3 – Source code was synced with Neon game development kit 5.2.5.</big><br>
     <big> 4.9.4 – Gopher 2 support was added.</big><br>
-    <big>4.9.5 – Source code was synced with Neon game development kit 5.2.6.</big>
+    <big>4.9.5 – Source code was synced with Neon game development kit 5.2.6.</big><br>
+    <big>4.9.6 – Source code was synced with Neon game development kit 5.2.7.</big><br>
+    <big>4.9.7 – Source code was synced with Neon game development kit 5.2.8.</big><br>
+    <big>4.9.8 – Source code was synced with Neon game development kit 5.2.9.</big><br>
+    <big>4.9.9 – Source code was synced with Neon game development kit 5.3.</big><br>
+    <big>5.0 – Source code was synced with Neon game development kit 5.3.2.</big><br>
+    <big>5.0.1 – Source code was synced with Neon game development kit 5.3.2.</big><br>
+    <big>5.0.2 – Source code was synced with Neon game development kit 5.3.3.</big><br>
+    <big>5.0.3 – Source code was synced with Neon game development kit 5.3.4.</big><br>
+    <big>5.0.4 – Source code was synced with Neon game development kit 5.3.5.</big><br>
+    <big>5.0.5 – Source code was synced with Neon game development kit 5.3.6.</big><br>
+    <big>5.0.6 – Source code was synced with Neon game development kit 5.3.7.</big><br>
+    <big>5.0.7 – Source code was synced with Neon game development kit 5.3.8.</big>
   </body>
 </html>
