Source code was synced with Neon game development kit 5.4.1

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1640,6 +1640,9 @@ sound
     <big>5.0.4 – Source code was synced with Neon game development kit 5.3.5.</big><br>
     <big>5.0.5 – Source code was synced with Neon game development kit 5.3.6.</big><br>
     <big>5.0.6 – Source code was synced with Neon game development kit 5.3.7.</big><br>
-    <big>5.0.7 – Source code was synced with Neon game development kit 5.3.8.</big>
+    <big>5.0.7 – Source code was synced with Neon game development kit 5.3.8.</big><br>
+    <big>5.0.8 – Source code was synced with Neon game development kit 5.3.9.</big><br>
+    <big>5.0.9 – Source code was synced with Neon game development kit 5.4.</big><br>
+    <big>5.1 – Source code was synced with Neon game development kit 5.4.1.</big>
   </body>
 </html>
