Source code was synced with Neon game development kit 5.4.4

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1643,6 +1643,9 @@ sound
     <big>5.0.7 – Source code was synced with Neon game development kit 5.3.8.</big><br>
     <big>5.0.8 – Source code was synced with Neon game development kit 5.3.9.</big><br>
     <big>5.0.9 – Source code was synced with Neon game development kit 5.4.</big><br>
-    <big>5.1 – Source code was synced with Neon game development kit 5.4.1.</big>
+    <big>5.1 – Source code was synced with Neon game development kit 5.4.1.</big><br>
+    <big>5.1.1 – Source code was synced with Neon game development kit 5.4.2.</big><br>
+    <big>5.1.2 – Source code was synced with Neon game development kit 5.4.3.</big><br>
+    <big>5.1.3 – Source code was synced with Neon game development kit 5.4.4.</big>
   </body>
 </html>
