--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -1329,6 +1329,7 @@ sound
     <big><br>
     </big>
     <table style="text-align: left; width: 425px; height: 94px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -1646,6 +1647,7 @@ sound
     <big>5.1 – Source code was synced with Neon game development kit 5.4.1.</big><br>
     <big>5.1.1 – Source code was synced with Neon game development kit 5.4.2.</big><br>
     <big>5.1.2 – Source code was synced with Neon game development kit 5.4.3.</big><br>
-    <big>5.1.3 – Source code was synced with Neon game development kit 5.4.4.</big>
+    <big>5.1.3 – Source code was synced with Neon game development kit 5.4.4.</big><br>
+    <big>5.1.3.1 – Makefile was updated.</big>
   </body>
 </html>
